# philos

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: ingest.py
src/: config.py  main.py  schemas.py
src/api/: deps.py  routes.py
src/services/: concurrency.py  embedder.py  ingester.py  llm.py  retriever.py
